# speedReader

./: .gitignore  Makefile  README.md  speedReader.cabal
src/: Main.hs  zipwav
src/SpeedReader/: Bookmark.hs  File.hs  Read.hs  Utils.hs
